fix additional report issue fields not showing up

--- a/themes/oxygen/css/oxygen.css
+++ b/themes/oxygen/css/oxygen.css
@@ -1849,7 +1849,7 @@ ul.workflow_actions li:hover { box-shadow: 0 0 2px rgba(0, 0, 0, 0.2); -webkit-b
 #reportissue_container .backdrop_detail_content { padding: 5px; font-size: 0.9em; }
 #reportissue_container .backdrop_detail_footer { padding: 5px; font-size: 1.1em; }
 #reportissue_container .backdrop_detail_footer a { font-weight: 300; }
-.backdrop_detail_content #report_issue_add_extra, .backdrop_detail_content #reproduction_steps_div { display: none; }
+/*.backdrop_detail_content #report_issue_add_extra, .backdrop_detail_content #reproduction_steps_div { display: none; }*/
 .backdrop_detail_content .tab_menu { margin-top: 30px; margin-bottom: 10px; font-size: 1.1em; }
 .backdrop_detail_footer { clear: both; font-weight: 600; font-size: 0.9em; padding: 5px; text-align: right; background-color: transparent; }
 
